--- a/MagicVilla_API/appsettings.json
+++ b/MagicVilla_API/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultSQLConnection": "Server=(localdb)\\mssqllocaldb;DataBase=MagicVilla_API;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
+  "ApiSettings": {
+    "Secret":  "JWT_TOKEN_JMKLASDl_JAKLNMNSALKFNJLSAKF_KLJKNSMFbNFJBHJHVB"
   }
 }
